fix: add overflow-y hidden and forbidden zoom in

--- a/joystick/src/styles.sass
+++ b/joystick/src/styles.sass
@@ -3,3 +3,6 @@
 // resolve issue of mobile touch
 #static
   touch-action: none
+
+body
+  overflow-y: hidden
